<resources>
    <!-- general -->
    <string name="app_name">Zuza\'s</string>
    <string name="zuza_logo">zuza logo</string>

    <!-- Registration/login pages -->
    <string name="username">שם משתמש</string>
    <string name="password">סיסמה</string>
    <string name="register">הרשמה</string>
    <string name="login">כניסה</string>
    <string name="forgot_password">שכחתי סיסמה</string>
    <string name="sign_in">התחברות</string>
    <string name="zuza_s">Zuza\'s</string>
    <string name="full_name">שם מלא</string>
    <string name="age">גיל</string>
    <string name="email">מייל</string>
    <string name="register_user">רשום משתמש חדש</string>
    <string name="enter_your_email">הכנס כתובת אימייל</string>
    <string name="reset_password">איפוס סיסמה</string>
    <string name="restore_account">שחזור משתמש</string>
    <string name="facebook_app_id">3018310431648249</string>
    <string name="fb_login_protocol_scheme">fb3018310431648249</string>
    <string name="facebook_client_token">48ec3cf223794ce4c9677cef67bca291</string>

    <!--Main Page -->
    <string name="Location">איך מגיעים אלינו?</string>
    <string name="Description">מאפים טריים, קינוחי וטרינה, כריכים, קישים, עוגות ועוגיות </string>

    <!-- (From Main Page) Menu page -->
    <string name="add_item_menu">הוספת פריט</string>
    <string name="get_items_menu">PRINT ITEMS</string>
    <string name="items_list">Items</string>


    <!-- (From Menu Page) Add item page (Manager page) -->
    <string name="menu_header">תפריט</string>

    <string name="add_item_header">הוספת פריט</string>
    <string name="add_item_name">שם</string>
    <string name="add_item_description">תיאור קצר (לא חייב למלא)</string>
    <string name="add_item_new_category">הוספת קטגוריה חדשה</string>
    <string name="add_item_category">קטגוריה</string>
    <string name="add_item_price">מחיר</string>
    <string name="add_item_finish">הוספת פריט</string>
    <string name="add_item_abort">לא משנה</string>
    <string name="menu_search">חיפוש</string>

    <!-- (From Menu Page) Edit item page (Manager page) -->
    <string name="edit_item_header">עריכת פריט</string>
    <string name="edit_item_name">שם הפריט לעריכה</string>
    <string name="edit_item_abort">לא משנה</string>
    <string name="edit_item_category">עריכת קטגוריה</string>
    <string name="edit_item_remove_category">הסרת קטגוריה</string>
    <string name="edit_item_finish">סיום עריכת פריט</string>
    <string name="edit_item_menu">עריכת פריט</string>
    <string name="edit_item_remove">הסרת פריט נבחר</string>

    <!-- Cart Page-->
    <string name="make_order">בצע הזמנה</string>
    <string name="previous_orders">הזמנות קודמות</string>
    <string name="add_to_cart">הוסף לעגלה</string>
    <string name="cart_del_all">מחק הכל</string>
    <string name="cart_del_one">מחק אחד</string>

    <!-- Profile Page-->
    <string name="account_settings">הגדרות משתמש</string>
    <string name="edit_profile">עריכת פרופיל</string>
    <string name="new_full_name">שם מלא חדש</string>
    <string name="new_age">גיל חדש</string>
    <string name="phone_number">מס\' טלפון</string>
    <string name="phone_hint">+972...</string>
    <string name="change_profile_picture">החלפת תמונת פרופיל</string>
    <string name="update_changes">שמירת שינויים</string>



    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <!-- Order Page-->
    <string name="order_details">פרטי הזמנה</string>
    <string name="complete_order">השלם הזמנה</string>
    <string name="status_order">סטטוס הזמנה</string>


</resources>