<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuItemEdit">

    <!-- Headline, describes current screen -->

    <Button
        android:id="@+id/edit_item_remove"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:onClick="onClick"
        android:text="@string/edit_item_remove"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_item_finish"
        app:layout_constraintTop_toBottomOf="@+id/edit_item_price" />

    <TextView
        android:id="@+id/edit_item_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/edit_item_header"
        android:textAlignment="center"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <AutoCompleteTextView
        android:id="@+id/edit_item_name"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/edit_item_name"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_item_header"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edit_item_description"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_item_name"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edit_item_category"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_item_description"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edit_item_price"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_item_category"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/edit_item_finish"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:onClick="onClick"
        android:text="@string/edit_item_finish"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_item_price" />

    <Button
        android:id="@+id/edit_item_abort"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="24dp"
        android:onClick="onClick"
        android:text="@string/edit_item_abort"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_item_finish" />

    <Button
        android:id="@+id/edit_item_edit_category"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:onClick="editCategory"
        android:text="@string/edit_item_category"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_item_remove"
        android:focusable="true"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/edit_item_remove_category"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:onClick="removeCategoryActivity"
        android:text="@string/edit_item_remove_category"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/edit_item_edit_category"
        app:layout_constraintTop_toBottomOf="@+id/edit_item_finish" />
</androidx.constraintlayout.widget.ConstraintLayout>

