<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/zuzalogin"
    tools:context=".Login">

    <TextView
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signin"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/Rifle_Green"
        android:drawableEnd="@drawable/ic_baseline_email_24_white"
        android:drawablePadding="20dp"
        android:hint="@string/email"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/pass_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/Rifle_Green"
        android:drawableEnd="@drawable/ic_baseline_key_24"
        android:drawablePadding="20dp"
        android:hint="סיסמה"
        android:gravity="right"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pass_login"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:backgroundTint="@color/Keppel"
        android:text="@string/login"
        android:textColor="#FFFF" />

    <TextView
        android:id="@+id/forgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:fontFamily="sans-serif"
        android:padding="20sp"


        android:text="@string/forgot_password"
        android:textColor="#ffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:layout_toEndOf="@+id/forgotPass"
        android:fontFamily="sans-serif"
        android:padding="20sp"
        android:text="@string/register"
        android:textColor="#ffff"
        android:textSize="18sp"
        android:textStyle="bold" />


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/socialicon"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-black"
        android:text="Or sign in with"
        android:textSize="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/socialicon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/facebook"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/fb" />

        <ImageView
            android:id="@+id/google"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/google" />

        <ImageView
            android:id="@+id/twiter"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/twitter" />


    </LinearLayout>


</RelativeLayout>